--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,9 @@
         "noImplicitAny": true, // Não permite que o tipo any seja inferido implicitamente. Com isso os tipos precisarão estar sempre
         //explicitos
         "removeComments": true, // Remove comentários na compilação do arquivo: comentários dos arquivos ts não vão para o js
-        "strictNullChecks": true // Diz para o compilador TSC que pare de assumir implicitamente o tipo null para todos os tipos 
+        "strictNullChecks": true, // Diz para o compilador TSC que pare de assumir implicitamente o tipo null para todos os tipos 
         //da aplicação
+        "experimentalDecorators": true //Habilita o uso de decorators no projeto
     },
 
     "include": [
